objects/Customer_Account_Plan_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Account Plan Histories</relationshipLabel>
        <relationshipName>Customer_Account_Plan_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Chemical_Spend__c</fullName>
        <label>Annual Chemical Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Articulate_difference__c</fullName>
        <label>Articulate differences current vs new</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_supplier_falls__c</fullName>
        <label>Current supplier falls short</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Plan__c</fullName>
        <label>Customer Account Plan</label>
        <referenceTo>Customer_Account_Plan__c</referenceTo>
        <relationshipLabel>Revision Histories</relationshipLabel>
        <relationshipName>Customer_Account_Plan_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dissatisfaction_with_solutions__c</fullName>
        <label>Dissatisfaction with existing solutions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_the_customer__c</fullName>
        <label>Does the customer have solutions?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engages_in_constructive__c</fullName>
        <label>Engages in constructive dialogue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Express_openness_to__c</fullName>
        <label>Express openness to escalation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_pressures__c</fullName>
        <label>External pressures to change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financially_healthy__c</fullName>
        <label>Financially healthy organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequent_sharing__c</fullName>
        <label>Frequent sharing of best practices</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_organizational__c</fullName>
        <label>General organizational needs unmet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_might_this_impact__c</fullName>
        <label>How might this impact the customer?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_might_this_impact_the_customer__c</fullName>
        <label>How might this impact the customer?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Improvement_initiatives__c</fullName>
        <label>Improvement initiatives as ongoing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_pressures__c</fullName>
        <label>Internal pressures to change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_the_competition__c</fullName>
        <label>Is the competition entrenched?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_the_customer_aware__c</fullName>
        <label>Is the customer aware of these changes?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Partnership__c</fullName>
        <label>Level of Partnership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Competitor__c</fullName>
        <label>Main Competitor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Review__c</fullName>
        <label>Manager Review</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobilizers_exist__c</fullName>
        <label>Mobilizers exist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_stakeholders__c</fullName>
        <label>Multiple stakeholders at learning events</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Readiness__c</fullName>
        <label>Net Readiness Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_wide__c</fullName>
        <label>Organization-wide discontent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <label>Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perceived_Univar_Strengths__c</fullName>
        <label>Perceived Univar Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Perceived_Univar_Weaknesses__c</fullName>
        <label>Perceived Univar Weaknesses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_continuing__c</fullName>
        <label>Request continuing conversations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rolling_12_Month_Closed_Lost_Ratio__c</fullName>
        <label>Rolling 12 Month - Closed Lost Ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rolling_12_Month_Closed_Won_Opptys__c</fullName>
        <label>Rolling 12 Month Closed/Won Opptys</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rolling_12_Month_Sales__c</fullName>
        <label>Rolling 12 Month Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMLink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the SFDC User record corresponding to the Sales Manager from UVX.  Populated on main CAP record by Apex trigger which looks up the User by alias, using the Sales Mgr Id from UVX.</description>
        <label>Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Account_Plan_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMName__c</fullName>
        <description>Text version of the SFDC Sales Manager&apos;s name.  Used in case there is no valid SFDC user record with alias matching the SM Id from the UVX - in this case we just use the SM Name from the UVX.</description>
        <label>Sales Manager</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Id__c</fullName>
        <label>Sales Manager Id (UVX)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <label>Sales Manager (UVX)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Senior_leaders_reach__c</fullName>
        <label>Senior leaders reach out for ideas</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_of_Wallet__c</fullName>
        <label>Share of Wallet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Significant_current_or_potential__c</fullName>
        <label>Significant current or potential spend</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Open_Opptys__c</fullName>
        <label>Total Open Opptys</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>What_Are_the_3_Biggest_Unknowns__c</fullName>
        <label>What Are the 3 Biggest Unknowns?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_can_I_use_Manager_Input_On__c</fullName>
        <label>What can I use Manager Input On?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_changes_are_happening__c</fullName>
        <label>What changes are happening</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>